<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15sp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30sp"
                android:paddingRight="30sp"
                android:text="@string/what_to_know_about_corona"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/par1"
                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15sp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30sp"
                android:paddingRight="10sp"
                android:text="@string/how_to_prevent_the_virus"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:text="@string/par2"
                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15sp"
                android:background="@color/colorPrimary"
                android:paddingLeft="30sp"
                android:text="@string/syptoms_of_the_virus"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:paddingRight="30sp"
                android:text="@string/par3"

                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>